fact outline done

--- a/index.html
+++ b/index.html
@@ -327,6 +327,46 @@
       <div class="content" id="facts">
         <img src="ghostbusters.jpg" alt="Ghostbusters" id="ghostbusters" />
         <h1>Fun Facts</h1>
+        <div class="internal" id="factintro">
+          The Ghostbusters weren't looking for facts in that library above, but we have some for you! Every month we update this section with
+          a new list of facts, one for each day! Scroll down to read our facts for May 2020.
+        </div>
+        <div id=factlist>
+          <h3>May 2020</h3>
+          <ol id="may20facts">
+            <li class="factitem" id="f1"></li>
+            <li class="factitem" id="f2"></li>
+            <li class="factitem" id="f3"></li>
+            <li class="factitem" id="f4"></li>
+            <li class="factitem" id="f5"></li>
+            <li class="factitem" id="f6"></li>
+            <li class="factitem" id="f7"></li>
+            <li class="factitem" id="f8"></li>
+            <li class="factitem" id="f9"></li>
+            <li class="factitem" id="f10"></li>
+            <li class="factitem" id="f11"></li>
+            <li class="factitem" id="f12"></li>
+            <li class="factitem" id="f13"></li>
+            <li class="factitem" id="f14"></li>
+            <li class="factitem" id="f15"></li>
+            <li class="factitem" id="f16"></li>
+            <li class="factitem" id="f17"></li>
+            <li class="factitem" id="f18"></li>
+            <li class="factitem" id="f19"></li>
+            <li class="factitem" id="f20"></li>
+            <li class="factitem" id="f21"></li>
+            <li class="factitem" id="f22"></li>
+            <li class="factitem" id="f23"></li>
+            <li class="factitem" id="f24"></li>
+            <li class="factitem" id="f25"></li>
+            <li class="factitem" id="f26"></li>
+            <li class="factitem" id="f27"></li>
+            <li class="factitem" id="f28"></li>
+            <li class="factitem" id="f29"></li>
+            <li class="factitem" id="f30"></li>
+            <li class="factitem" id="f31"></li>
+          </ol>
+        </div>
       </div>
     </div>
 
