working on fact list

--- a/index.html
+++ b/index.html
@@ -332,39 +332,163 @@
           a new list of facts, one for each day! Scroll down to read our facts for May 2020.
         </div>
         <div id=factlist>
-          <h3>May 2020</h3>
+          <h3>May 2020</h3> <!--Facts from https://www.boredpanda.com/interesting-movie-facts/?utm_source=google&utm_medium=organic&utm_campaign=organic-->
           <ol id="may20facts">
-            <li class="factitem" id="f1"></li>
-            <li class="factitem" id="f2"></li>
-            <li class="factitem" id="f3"></li>
-            <li class="factitem" id="f4"></li>
-            <li class="factitem" id="f5"></li>
-            <li class="factitem" id="f6"></li>
-            <li class="factitem" id="f7"></li>
-            <li class="factitem" id="f8"></li>
-            <li class="factitem" id="f9"></li>
-            <li class="factitem" id="f10"></li>
-            <li class="factitem" id="f11"></li>
-            <li class="factitem" id="f12"></li>
-            <li class="factitem" id="f13"></li>
-            <li class="factitem" id="f14"></li>
-            <li class="factitem" id="f15"></li>
-            <li class="factitem" id="f16"></li>
-            <li class="factitem" id="f17"></li>
-            <li class="factitem" id="f18"></li>
-            <li class="factitem" id="f19"></li>
-            <li class="factitem" id="f20"></li>
-            <li class="factitem" id="f21"></li>
-            <li class="factitem" id="f22"></li>
-            <li class="factitem" id="f23"></li>
-            <li class="factitem" id="f24"></li>
-            <li class="factitem" id="f25"></li>
-            <li class="factitem" id="f26"></li>
-            <li class="factitem" id="f27"></li>
-            <li class="factitem" id="f28"></li>
-            <li class="factitem" id="f29"></li>
-            <li class="factitem" id="f30"></li>
-            <li class="factitem" id="f31"></li>
+            <li class="factitem" id="f1"><i>Guardians of the Galaxy</i> (2014)
+              <ul>
+                <li>Chris Pratt apparently stole his Star-Lord costume from the set, for the sole purpose of having it available so he could show up in costume to visit sick children in the hospital, who might want to meet Star-Lord.</li>
+              </ul>
+            </li>
+            <li class="factitem" id="f2"><i>Armageddon</i> (1998)
+              <ul>
+                <li>NASA shows this film during their management training program. New managers are given the task of trying to spot as many errors as possible. At least one hundred sixty-eight have been found.</li>
+              </ul>
+            </li>
+            <li class="factitem" id="f3"><i>Dallas Buyers Club</i> (2013)
+              <ul>
+                <li>The film's budget was so low that the makeup budget was $250. The film's artists were able to work with that, and the film's Makeup and Hairstyling team won an Oscar.</li>
+              </ul>
+            </li>
+            <li class="factitem" id="f4"><i>Star Trek</i> (2009)
+              <ul>
+                <li>The sound of the automatic doors opening on the U.S.S. Enterprise, is a Russian train's toilet flushing.</li>
+              </ul>
+            </li>
+            <li class="factitem" id="f5"><i>Titanic</i> (1997)
+              <ul>
+                <li>The scenes set in 1912, i.e. the whole movie except the present-day scenes and the opening and ending credits, have a total length of two hours and forty minutes, the exact time it took for Titanic to sink. Also, the collision with the iceberg reportedly lasted 37 seconds, which is how long the collision scene is in the movie.</li>
+              </ul>
+            </li>
+            <li class="factitem" id="f6"><i>Black Swan</i> (2010)
+              <ul>
+                <li>Natalie Portman not only trained for a year as a dancer to prepare for the role, but paid for the the training out of her own pocket until the film found investors. Aronofsky attributed the film's getting made at all to Portman's dedication and enthusiasm.</li>
+              </ul>
+            </li>
+            <li class="factitem" id="f7"><i>Schindler's List</i> (1993)
+              <ul>
+                <li>During production, the atmosphere was so grim and depressing that Steven Spielberg asked his friend Robin Williams if he could tell some jokes and do comedy sketches. Some of Williams' sketches that were played through the speaker phone to the cast and crew ended up being part of dialogue material for his character in <i>Aladdin</i> (1992), the Genie.</li>
+              </ul>
+            </li>
+            <li class="factitem" id="f8"><i>The Hangover</i> (2009)
+              <ul>
+                <li>Ed Helms is actually missing a tooth. He never had an adult incisor grow, and his fake incisor was taken out for the parts of filming where Stu's tooth is missing.</li>
+              </ul>
+            </li>
+            <li class="factitem" id="f9"><i>It</i> (2017)
+              <ul>
+                <li>The Duffer Brothers originally wanted to direct the movie, but were overlooked as they were not "established" enough. They went on to create <i>Stranger Things</i> (2016), which pays homage to Stephen King.</li>
+              </ul>
+            </li>
+            <li class="factitem" id="f10"><i>2001: A Space Odyssey</i> (1968)
+              <ul>
+                <li>Stanley Kubrick destroyed almost all of his props and sets from the film because he didn't want them to be used in any lesser science fiction films.</li>
+              </ul>
+            </li>
+            <li class="factitem" id="f11">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f12">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f13">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f14">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f15">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f16">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f17">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f18">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f19">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f20">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f21">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f22">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f23">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f24">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f25">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f26">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f27">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f28">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f29">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f30">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li class="factitem" id="f31">
+              <ul>
+                <li></li>
+              </ul>
+            </li>
           </ol>
         </div>
       </div>
