more fact progress

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
           a new list of facts, one for each day! Scroll down to read our facts for May 2020.
         </div>
         <div id=factlist>
-          <h3>May 2020</h3> <!--Facts from https://www.boredpanda.com/interesting-movie-facts/?utm_source=google&utm_medium=organic&utm_campaign=organic-->
+          <h3>May 2020</h3> <!--Facts from https://www.boredpanda.com/interesting-movie-facts/?utm_source=google&utm_medium=organic&utm_campaign=organic https://bestlifeonline.com/movie-facts/-->
           <ol id="may20facts">
             <li class="factitem" id="f1"><i>Guardians of the Galaxy</i> (2014)
               <ul>
@@ -384,54 +384,54 @@
                 <li>Stanley Kubrick destroyed almost all of his props and sets from the film because he didn't want them to be used in any lesser science fiction films.</li>
               </ul>
             </li>
-            <li class="factitem" id="f11">
+            <li class="factitem" id="f11"><i>The Social Network</i> (2010)
               <ul>
-                <li></li>
+                <li>During one of the depositions, it is mentioned that the invention of Facebook made Mark Zuckerberg "the biggest thing on a campus that included nineteen Nobel Laureates, fifteen Pulitzer Prize winners, two future Olympians, and a movie star." One of the lawyers then asks, "Who was the movie star?" and the response is, "Does it matter?" This movie star was, in fact, Natalie Portman, who was enrolled at Harvard from 1999 to 2003 and helped screenwriter Aaron Sorkin by providing him insider information about goings-on at Harvard at the time Facebook first appeared there.</li>
               </ul>
             </li>
-            <li class="factitem" id="f12">
+            <li class="factitem" id="f12"><i>Charlie and the Chocolate Factory</i> (2005)
               <ul>
-                <li></li>
+                <li>Nestlé provided 1,850 bars of real chocolate.</li>
               </ul>
             </li>
-            <li class="factitem" id="f13">
+            <li class="factitem" id="f13"><i>Birdman</i> (2014)
               <ul>
-                <li></li>
+                <li>Given the unusual style of filming long takes, Edward Norton and Michael Keaton kept a running tally of flubs made by the actors and actresses. Emma Stone made the most mistakes. Zach Galifianakis made the fewest. He actually did mess up a few lines during the filming, but played his mistakes off well enough, that the shots were included in the film.</li>
               </ul>
             </li>
-            <li class="factitem" id="f14">
+            <li class="factitem" id="f14"><i>Inception</i> (2010)
               <ul>
-                <li></li>
+                <li>Christopher Nolan based roles of the team similar to roles that are used in filmmaking - Cobb is the Director, Arthur is the Producer, Ariadne is the Production Designer, Eames is the Actor, Saito is the Studio, and Fischer is the Audience. "In trying to write a team-based creative process, I wrote the one I know," said Nolan.</li>
               </ul>
             </li>
-            <li class="factitem" id="f15">
+            <li class="factitem" id="f15"><i>Ex Machina</i> (2014)
               <ul>
-                <li></li>
+                <li>Throughout the film, the colors red, blue, and green are prominently displayed in each scene (the green forest, the red brick hallway, the keypad's red and blue functions, etc.) This is a nod to the RGB color model, which is used to display images in electronic systems, such as computers. Ava, of course, being the main computer in the film.</li>
               </ul>
             </li>
-            <li class="factitem" id="f16">
+            <li class="factitem" id="f16"><i>Toy Story 2</i> (1999)
               <ul>
-                <li></li>
+                <li>A command entered in the "master machine" where the animation for the film was stored deleted 90 percent of the work the Pixar team had done on it. Fortunately, the film's technical director had a copy she had been working on from home, and much of it was restored.</li>
               </ul>
             </li>
-            <li class="factitem" id="f17">
+            <li class="factitem" id="f17"><i>Jaws</i> (1975)
               <ul>
-                <li></li>
+                <li>The film's best-known line ("You're gonna need a bigger boat") was not in the actual script; it was improvised.</li>
               </ul>
             </li>
-            <li class="factitem" id="f18">
+            <li class="factitem" id="f18"><i>The Matrix</i> (1999)
               <ul>
-                <li></li>
+                <li>The complex-looking green digits scrolling down the screen in the film may look like mysterious code, but in fact they were symbols from a sushi cookbook, scanned by the movie's production designer.</li>
               </ul>
             </li>
-            <li class="factitem" id="f19">
+            <li class="factitem" id="f19"><i>The Wolf of Wall Street</i> (2013)
               <ul>
-                <li></li>
+                <li>The actors snorted crushed vitamin powder whenever they had to look like they were snorting cocaine. Jonah Hill was hospitalized because of it.</li>
               </ul>
             </li>
-            <li class="factitem" id="f20">
+            <li class="factitem" id="f20"><i>Singin' in the Rain</i> (1952)
               <ul>
-                <li></li>
+                <li>Gene Kelly filmed the title musical number with a 103 degree fever.</li>
               </ul>
             </li>
             <li class="factitem" id="f21">
