facts finished, starting resources

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
           a new list of facts, one for each day! Scroll down to read our facts for May 2020.
         </div>
         <div id=factlist>
-          <h3>May 2020</h3> <!--Facts from https://www.boredpanda.com/interesting-movie-facts/?utm_source=google&utm_medium=organic&utm_campaign=organic https://bestlifeonline.com/movie-facts/-->
+          <h3>May 2020</h3> <!--Facts from https://www.boredpanda.com/interesting-movie-facts/?utm_source=google&utm_medium=organic&utm_campaign=organic https://bestlifeonline.com/movie-facts/ https://www.buzzfeed.com/audreyworboys/21-movie-facts-that-i-find-unbelievably-interesting https://www.buzzfeed.com/spenceralthouse/movie-facts-quiz-->
           <ol id="may20facts">
             <li class="factitem" id="f1"><i>Guardians of the Galaxy</i> (2014)
               <ul>
@@ -434,59 +434,59 @@
                 <li>Gene Kelly filmed the title musical number with a 103 degree fever.</li>
               </ul>
             </li>
-            <li class="factitem" id="f21">
+            <li class="factitem" id="f21"><i>The Fast and the Furious</i> (2001)
               <ul>
-                <li></li>
+                <li>Neither Michelle Rodriguez nor Jordana Brewster had their driver's licenses when they were cast for the film.</li>
               </ul>
             </li>
-            <li class="factitem" id="f22">
+            <li class="factitem" id="f22"><i>Sixteen Candles</i> (1984)
               <ul>
-                <li></li>
+                <li>The cake in the film is cardboard.</li>
               </ul>
             </li>
-            <li class="factitem" id="f23">
+            <li class="factitem" id="f23"><i>The Dark Knight</i> (2008)
               <ul>
-                <li></li>
+                <li>Michael Caine was so terrified of Heath Ledger's Joker that he literally forgot his lines in the first scene they shot together.</li>
               </ul>
             </li>
-            <li class="factitem" id="f24">
+            <li class="factitem" id="f24"><i>The Hateful Eight</i> (2015)
               <ul>
-                <li></li>
+                <li>Due to a miscommunication on set, Kurt Russell accidentally smashed an antique guitar from 1870 instead of a prop guitar. You can see Jennifer Jason Leigh scream and look at the crew in the shot after it happens.</li>
               </ul>
             </li>
-            <li class="factitem" id="f25">
+            <li class="factitem" id="f25"><i>Snakes on a Plane</i> (2006)
               <ul>
-                <li></li>
+                <li>In the middle of filming, the title was changed to <i>Pacific Air Flight 121</i>. This is not an uncommon practice in filmmaking, but Samuel L. Jackson insisted that they change it back to the original title immediately. He later admitted, “That’s the only reason I took the job: I read the title.”</li>
               </ul>
             </li>
-            <li class="factitem" id="f26">
+            <li class="factitem" id="f26"><i>Home Alone</i> (1990)
               <ul>
-                <li></li>
+                <li>There wasn't supposed to be any snow in the film, but after a blizzard hit on the second day of filming it forced the filmmakers to add snow to all the other scenes for continuity.</li>
               </ul>
             </li>
-            <li class="factitem" id="f27">
+            <li class="factitem" id="f27"><i>The Wizard of Oz</i> (1939)
               <ul>
-                <li></li>
+                <li>Margaret Hamilton, aka the Wicked Witch, suffered second-degree burns on her face and third-degree burns on her hand when a stunt went wrong.</li>
               </ul>
             </li>
-            <li class="factitem" id="f28">
+            <li class="factitem" id="f28"><i>Now You See Me</i> (2013)
               <ul>
-                <li></li>
+                <li>Isla Fisher almost drowned in front of the whole cast and crew while filming an underwater magic trick in one scene.</li>
               </ul>
             </li>
-            <li class="factitem" id="f29">
+            <li class="factitem" id="f29"><i>Spider-Man: Far From Home</i> (2019)
               <ul>
-                <li></li>
+                <li>Samuel L. Jackson improvised the iconic "Bitch, please. You've been to space" rebuttal after Peter claimed he was just a neighborhood Spider-Man.</li>
               </ul>
             </li>
-            <li class="factitem" id="f30">
+            <li class="factitem" id="f30"><i>Call Me By Your Name</i> (2017)
               <ul>
-                <li></li>
+                <li>Timothée Chalamet wore an earpiece while shooting the fireplace scene so he could listen and react to the song that would be played in the actual movie.</li>
               </ul>
             </li>
-            <li class="factitem" id="f31">
+            <li class="factitem" id="f31"><i>Thor: Ragnarok</i> (2017)
               <ul>
-                <li></li>
+                <li>The "He's a friend from work!" line was actually improvised by a kid from Make-a-Wish who was visiting the set.</li>
               </ul>
             </li>
           </ol>
@@ -498,6 +498,7 @@
 
     <div class="restofpage" id="resourcesect">
       <div class="content" id="resources">
+        <img src="catchme.jpg" alt="Catch Me If You Can" id="catchme" />
         <h1>Resource Reserve</h1>
       </div>
     </div>
