changed contact form

--- a/index.html
+++ b/index.html
@@ -500,6 +500,10 @@
       <div class="content" id="resources">
         <img src="catchme.jpg" alt="Catch Me If You Can" id="catchme" />
         <h1>Resource Reserve</h1>
+        <div class="internal" id="resourceintro">
+          We know we're not the be-all-end-all of information regarding your favorite movies; there's a whole digital world out there for
+          you to explore! Allow us to be your copilot, as we recommend the following websites to learn more about your favorite films...
+        </div>
       </div>
     </div>
 
@@ -519,7 +523,7 @@
           <h6>What's up, Doc?</h6>
           <textarea name="contactmessage" id="contactcontents" form="helpform" placeholder="Type here..."></textarea>
           <form id="helpform" action="/action_page.php">
-            <input type="button" value="Submit" id=submitbtn>
+            <input type="button" value="Submit" id=submitbtn onClick = "emptyOut()">
           </form>
         </div>
       </div>
