comments added at top

--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
 
     <!--Link to personal stylesheet-->
     <link rel="stylesheet" type="text/css" href="style.css">
+
+    <!--
+      - For my final project, I built a fake movie trivia website as opposed to movies and TV that I originally proposed.
+      - I used the Open Trivia Database API (linked on my website) and built a trivia game the user can interact with using Javascript.
+        Users can say how many questions they want and what level of difficulty.
+      - In terms of something that wasn't covered in class, I researched how to display a personalized message when someone finished playing
+        the game. This can be seen when you click "Share on Facebook" or "Share on Twitter" at the end of the game. I couldn't figure out how
+        to do this on Facebook, but on Twitter it will populate a tweet with your score, a challenge message, and a link to the website. Facebook
+        just has a link to the website.
+      - At the time I'm writing this, my Github url is displaying some things differently than the appear locally. Specifically, my box office
+        table's styling isn't really displaying correctly (ie Rank is flowing over), but my local index.html file displays that it looks fine
+        (I included a screenshot, fixedtables.png, to show what things look like on my end if that matters).
+    -->
   </head>
 
   <body>
@@ -503,6 +516,8 @@
         <div class="internal" id="resourceintro">
           We know we're not the be-all-end-all of information regarding your favorite movies; there's a whole digital world out there for
           you to explore! Allow us to be your copilot, as we recommend the following websites to learn more about your favorite films...
+        </div>
+        <div class="internal" id="recommendations">
         </div>
       </div>
     </div>
