resources in progress

--- a/index.html
+++ b/index.html
@@ -515,9 +515,47 @@
         <h1>Resource Reserve</h1>
         <div class="internal" id="resourceintro">
           We know we're not the be-all-end-all of information regarding your favorite movies; there's a whole digital world out there for
-          you to explore! Allow us to be your copilot, as we recommend the following websites to learn more about your favorite films...
+          you to explore! Allow us to be your co-pilot, as we recommend the following websites to learn more about your favorite films...
         </div>
-        <div class="internal" id="recommendations">
+        <div class="internal" id="recommendations"> <!--Most text from http://www.instantshift.com/2013/02/12/top-12-websites-for-all-your-movie-related-needs/ -->
+          <div class="recommendation" id="imdb">
+            <h3><a href="https://www.imdb.com" target="_blank">IMDB</a></h3>
+            <div class="reccontent" id="imdbrec">
+              One of the most, if not THE most, popular online databases in regards to entertainment media, the Internet Movie Database, better known as IMDB is your one-stop shop for all of your movie-related needs. Launched back in October 1990, IMDB serves as an informational database for everything related to film, television and video games. The site takes it a step further by providing information on just about every possible known actor and director via short bios and of course a list of films they acted in, produced or directed. Information on production staff, voice actors,and film/television/video game characters can also be accessed for further information as well. With trivia, quotes, news, movie trailers, galleries, and various other lists and interactive sections, IMDB really is the place you should visit first if you’re interested in what’s going on in the film and television industry.
+            </div>
+            <div class="reccontent" id="imdbcommunity">
+              IMDB allows for member sign-up which will allow you to access the message boards and of course contribute all types of information on the site. You can also create lists, rate movies, and, if you’re a filmmaker or actor, you can create your own profile and update it whenever you want. Sign-up is free.
+            </div>
+            <div class="reccontent" id="imdbapp">
+              IMDB is app accessible and is mobile ready.
+            </div>
+          </div>
+          <div class="recommendation" id="rotten">
+            <h3><a href="https://www.rottentomatoes.com" target="_blank">Rotten Tomatoes</a></h3>
+            <div class="reccontent" id="rottenrec">
+
+            </div>
+          </div>
+          <div class="recommendation" id="drew">
+            <h3><a href="http://www.script-o-rama.com/table.shtml" target="_blank">Drew's Script-O-Rama</a></h3>
+
+          </div>
+          <div class="recommendation" id="mojo">
+            <h3><a href="https://www.boxofficemojo.com" target="_blank">Box Office Mojo</a></h3>
+
+          </div>
+          <div class="recommendation" id="flixster">
+            <h3><a href="https://www.flixster.com" target="_blank">Flixster</a></h3>
+
+          </div>
+          <div class="recommendation" id="mubi">
+            <h3><a href="https://mubi.com" target="_blank">MUBI</a></h3>
+
+          </div>
+          <div class="recommendation" id="imp">
+            <h3><a href="http://www.impawards.com" target="_blank">IMP Awards</a></h3>
+
+          </div>
         </div>
       </div>
     </div>
