--- a/index.html
+++ b/index.html
@@ -533,28 +533,50 @@
           <div class="recommendation" id="rotten">
             <h3><a href="https://www.rottentomatoes.com" target="_blank">Rotten Tomatoes</a></h3>
             <div class="reccontent" id="rottenrec">
-
+                A popular film review aggregator and community forum, Rotten Tomatoes was created back in August 1998 with the purpose of being a website in which people could get the latest movie reviews from U.S. based critics. Rotten Tomatoes' main focus is on reviews for the latest films by certified authors, which are typically members of various writing guilds or associations for film critics. Other than critic reviews on recently released films, the site also provides other film related information including trailers for soon to be released movies, photo galleries, updated box office numbers, DVD releases, a list of movies currently being streamed on Netflix, and other helpful tools. You can also find bios and list of filmographies for your favorite actors as well as news.
+            </div>
+            <div class="reccontent" id="rottencommunity">
+              The website allows member sign-up, where you can view profiles, connect with fellow enthusiasts, write reviews, rate movies, join in on discussions and a list of other things.
+            </div>
+            <div class="reccontent" id="rottenapp">
+              Rotten Tomatoes can be taken with you anywhere with it being mobile ready. Devices compatible with the app are the iPhone, iPad, iPod Touch, Android, Blackberry, Windows Phone, and webOS devices.
             </div>
           </div>
           <div class="recommendation" id="drew">
             <h3><a href="http://www.script-o-rama.com/table.shtml" target="_blank">Drew's Script-O-Rama</a></h3>
-
+            <div class="reccontent" id="drewrec">
+              Drew's Script-O-Rama, while very bare-bones and hard-to-navigate, is a cinephile's paradise once you find your way around. Built and run by its faceless leader "Drew", the website links you to scripts and transcripts of your favorite movies and television shows. Sometimes a certain movie or TV episode even has multiple versions that you can compare to see how the project evolved over time.
+            </div>
           </div>
           <div class="recommendation" id="mojo">
             <h3><a href="https://www.boxofficemojo.com" target="_blank">Box Office Mojo</a></h3>
-
+            <div class="reccontent" id="mojorec">
+              If you’re interested in how well newly-released films are doing in the box office, then Box Office Mojo is the site for you. Created back in 1999 by Brandon Gray, Box Office Mojo seems to have one focus alone and that is to track the box office revenue of films being released in movie theaters and make them publicly accessible. The site allows for the comprehensive box office tracking directly online along with giving access to both news and analysis of said box office results. Box office results can be checked by various timelines including daily, weekend, weekly, monthly, quarterly and more. For specific information you can choose from a variety of options under the indices list which includes people (actors, directors, producers, screenwriters, cinematographers and composers), studios, genres, and franchises. You can also track a specific movie’s daily earnings in the box office by clicking the film title.
+            </div>
           </div>
           <div class="recommendation" id="flixster">
             <h3><a href="https://www.flixster.com" target="_blank">Flixster</a></h3>
-
+            <div class="reccontent" id="flixsterrec">
+              Flixster is a movie social networking site. Launched back in 2006, Flixster takes a different approach by not just allowing users to access information on the latest movie releases and share ratings on movies and actors, but also allowing them to discover new films, meet people with similar tastes, and invite friends to join up and watch clips from both movies and TV. The site now also offers its users to stream their favorite movies and television shows by using UltraViolet, a new industry-backed product that allows users to get access to movies and television shows directly to their compatible devices.
+            </div>
+            <div class="reccontent" id="flixstercommunity">
+              The Flixster community is free to join, and once you’re a member, you can begin sharing your favorite movies, rate and leave reviews, meet new people, watch trailers and movies for free, take fun quizzes, and a bevy of other fun things.
+            </div>
+            <div class="reccontent" id="flixsterapp">
+              Flixster is a mobile accessible site and also offers an app where you can stream movies instantly and watch them offline.
+            </div>
           </div>
           <div class="recommendation" id="mubi">
             <h3><a href="https://mubi.com" target="_blank">MUBI</a></h3>
-
+            <div class="reccontent" id="mubirec">
+              Not everyone is into the latest Hollywood blockbusters; some prefer more artsy or international films. If you’re one of those people, then MUBI is the place for you. Similar to Netflix, as it allows you to stream movies, MUBI focuses on offering an online collection of independent, international, and classic films. MUBI is essentially an online movie theater where you not only watch films but can also discuss them with likeminded people within the MUBI community. It’s a social cinema with a growing social network of fans that join the forums after watching a film and sometimes even write up reviews to share with their fellow movie watchers. MUBI is affordable at a low price of $4.99 per month, plus they offer a free trial at the beginning. Offering a new movie every day, there are 30 different films you can choose from each day. For every new one that appears, an old one disappears making way for another film. Not only can you watch movies, but you can also read the latest news from the world of cinema via the MUBI feature Notebook.
+            </div>
           </div>
           <div class="recommendation" id="imp">
             <h3><a href="http://www.impawards.com" target="_blank">IMP Awards</a></h3>
-
+            <div class="reccontent" id="imprec">
+              This site is all about your movie-poster-related needs. You can find almost all posters for recent movies released after year 2000, but you can also find selected posters of movies released after year 1912. Most of the posters can be seen in high resolution.
+            </div>
           </div>
         </div>
       </div>
