--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>CSE204A Final: Film Facts</title>
 
     <!--Link to Hollywood Hills Font-->
-    <link href="//db.onlinewebfonts.com/c/799c2b7eeef3056e16365d7c857c15a1?family=SF+Hollywood+Hills" rel="stylesheet" type="text/css"/>
+    <link href="https://db.onlinewebfonts.com/c/799c2b7eeef3056e16365d7c857c15a1?family=SF+Hollywood+Hills" rel="stylesheet" type="text/css"/>
 
     <!--Link to Rubik Font-->
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
